# monique-indexer

./: .gitignore  Cargo.toml  README.md
src/: api.rs  db.rs  indexer.rs  lib.rs  main.rs
src/index/: checkpoint.rs  flat_storage.rs  mod.rs  storage.rs  tests.rs
src/indexer/: block.rs  mod.rs
src/words/: list.rs  mod.rs
