[package]
name = "eth3words"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations

[dependencies]
bitvec = "1.0.1"
ethers = {version="2.0.4", features=["ws", "rustls"]}
hex = "0.4.3"
serde_json = "1.0.96"
tokio = {version="1.28.1", features=["full"]}
patricia-merkle-tree = { git = "https://github.com/lambdaclass/merkle_patricia_tree.git"}
sha3 = "0.10.8"
indexmap = "1.9.3"
hex-literal = "0.4.1"
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
rustc-hex = "2.1.0"
tempfile = "3.6.0"
lru = "0.12.1"
libmdbx = "0.4.1"
xxhash-rust = {version = "0.8.8", features=["xxh3"]}